objects/Account_Revenue_Forecast_Comment__c.object
<CustomObject>
    <fields>
        <fullName>Account_Formula__c</fullName>
        <formula>/*Commented on request of Vivek on 21/5/2019.
ABS(Case( Quarter_Upside_Risk__c,
&apos;Risk - Q1 - 2018&apos;, Account_Revenue_Forecast__r.Q1_2018_Low__c,
&apos;Risk - Q2 - 2018&apos;, Account_Revenue_Forecast__r.Q2_2018_Low__c,
&apos;Risk - Q3 - 2018&apos;, Account_Revenue_Forecast__r.Q3_2018_Low__c,
&apos;Risk - Q4 - 2018&apos;, Account_Revenue_Forecast__r.Q4_2018_Low__c,
&apos;Risk - Q1 - 2019&apos;, Account_Revenue_Forecast__r.Q1_2019_Low__c,
&apos;Risk - Q2 - 2019&apos;, Account_Revenue_Forecast__r.Q2_2019_Low__c,
&apos;Risk - Q3 - 2019&apos;, Account_Revenue_Forecast__r.Q3_2019_Low__c,
&apos;Risk - Q4 - 2019&apos;, Account_Revenue_Forecast__r.Q4_2019_Low__c,
&apos;Upside - Q1 - 2019&apos;, Account_Revenue_Forecast__r.Q1_2019_Best__c,
&apos;Upside - Q1 - 2018&apos;, Account_Revenue_Forecast__r.Q1_2018_Best__c,
&apos;Upside - Q2 - 2018&apos;, Account_Revenue_Forecast__r.Q2_2018_Best__c,
&apos;Upside - Q3 - 2018&apos;, Account_Revenue_Forecast__r.Q3_2018_Best__c,
&apos;Upside - Q4 - 2018&apos;, Account_Revenue_Forecast__r.Q4_2018_Best__c,
&apos;Upside - Q2 - 2019&apos;, Account_Revenue_Forecast__r.Q2_2019_Best__c,
&apos;Upside- Q3 - 2019&apos;, Account_Revenue_Forecast__r.Q3_2019_Best__c,
&apos;Upside- Q4 - 2019&apos;, Account_Revenue_Forecast__r.Q4_2019_Best__c,
&apos;Upside- Q1 - 2019&apos;, Account_Revenue_Forecast__r.Q1_2019_Best__c,
&apos;Risk - ROY - 2018&apos;, Account_Revenue_Forecast__r.Q2_2018_Low__c + Account_Revenue_Forecast__r.Q3_2018_Low__c + Account_Revenue_Forecast__r.Q4_2018_Low__c,
&apos;Risk - ROY - 2019&apos;, Account_Revenue_Forecast__r.Q2_2019_Low__c + Account_Revenue_Forecast__r.Q3_2019_Low__c + Account_Revenue_Forecast__r.Q4_2019_Low__c,
&apos;Upside - ROY - 2018&apos;, Account_Revenue_Forecast__r.Q2_2018_Best__c + Account_Revenue_Forecast__r.Q3_2018_Best__c + Account_Revenue_Forecast__r.Q4_2018_Best__c,
&apos;Upside - ROY - 2019&apos;, Account_Revenue_Forecast__r.Q2_2019_Best__c + Account_Revenue_Forecast__r.Q3_2019_Best__c + Account_Revenue_Forecast__r.Q4_2019_Best__c,


0))
*/

ABS(Case( Quarter_Upside_Risk__c, 
&apos;Risk - Q1 - 2019&apos;, Account_Revenue_Forecast__r.Q1_2019_Low__c,
&apos;Risk - Q2 - 2019&apos;, Account_Revenue_Forecast__r.Q2_2019_Low__c, 
&apos;Risk - Q3 - 2019&apos;, Account_Revenue_Forecast__r.Q3_2019_Low__c, 
&apos;Risk - Q4 - 2019&apos;, Account_Revenue_Forecast__r.Q4_2019_Low__c,
&apos;Risk - Q1 - 2020&apos;, Account_Revenue_Forecast__r.Q1_2020_Low__c, 
&apos;Risk - Q2 - 2020&apos;, Account_Revenue_Forecast__r.Q2_2020_Low__c, 
&apos;Risk - Q3 - 2020&apos;, Account_Revenue_Forecast__r.Q3_2020_Low__c, 
&apos;Risk - Q4 - 2020&apos;, Account_Revenue_Forecast__r.Q4_2020_Low__c,
&apos;Upside - Q1 - 2019&apos;, Account_Revenue_Forecast__r.Q1_2019_Best__c, 
&apos;Upside - Q2 - 2019&apos;, Account_Revenue_Forecast__r.Q2_2019_Best__c, 
&apos;Upside - Q3 - 2019&apos;, Account_Revenue_Forecast__r.Q3_2019_Best__c, 
&apos;Upside - Q4 - 2019&apos;, Account_Revenue_Forecast__r.Q4_2019_Best__c,
&apos;Upside - Q1 - 2020&apos;, Account_Revenue_Forecast__r.Q1_2020_Best__c, 
&apos;Upside - Q2 - 2020&apos;, Account_Revenue_Forecast__r.Q2_2020_Best__c, 
&apos;Upside - Q3 - 2020&apos;, Account_Revenue_Forecast__r.Q3_2020_Best__c, 
&apos;Upside - Q4 - 2020&apos;, Account_Revenue_Forecast__r.Q4_2020_Best__c,
&apos;Risk - ROY - 2019&apos;, Account_Revenue_Forecast__r.Q2_2019_Low__c + Account_Revenue_Forecast__r.Q3_2019_Low__c + Account_Revenue_Forecast__r.Q4_2019_Low__c, 
&apos;Risk - ROY - 2020&apos;, Account_Revenue_Forecast__r.Q2_2020_Low__c + Account_Revenue_Forecast__r.Q3_2020_Low__c + Account_Revenue_Forecast__r.Q4_2020_Low__c, 
&apos;Upside - ROY - 2019&apos;, Account_Revenue_Forecast__r.Q2_2019_Best__c + Account_Revenue_Forecast__r.Q3_2019_Best__c + Account_Revenue_Forecast__r.Q4_2019_Best__c, 
&apos;Upside - ROY - 2020&apos;, Account_Revenue_Forecast__r.Q2_2020_Best__c + Account_Revenue_Forecast__r.Q3_2020_Best__c + Account_Revenue_Forecast__r.Q4_2020_Best__c,

0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Revenue_Forecast__c</fullName>
        <label>Account Revenue Forecast</label>
        <referenceTo>Account_Revenue_Forecast__c</referenceTo>
        <relationshipLabel>Account Revenue Forecast Comments</relationshipLabel>
        <relationshipName>Account_Revenue_Forecast_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>By_When__c</fullName>
        <label>By When</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>By_Whom__c</fullName>
        <label>By Whom</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Clone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Clone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Land_Change__c</fullName>
        <formula>Account_Revenue_Forecast__r.Q1_2017_Land__c - Account_Revenue_Forecast__r.Previous_Week__r.Q1_2017_Land__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Land Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Likely__c</fullName>
        <label>Likely</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quarter_Name__c</fullName>
        <formula>Account_Revenue_Forecast__r.Cloud_Forecast_Quarter__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_Reason__c</fullName>
        <formula>Quarter_Upside_Risk__c  +  text(Reason__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_Upside_Risk__c</fullName>
        <label>Quarter Upside/Risk</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-2015</fullName>
                </value>
                <value>
                    <fullName>2-2015</fullName>
                </value>
                <value>
                    <fullName>3-2015</fullName>
                </value>
                <value>
                    <fullName>4-2015</fullName>
                </value>
                <value>
                    <fullName>1-2016</fullName>
                </value>
                <value>
                    <fullName>2-2016</fullName>
                </value>
                <value>
                    <fullName>3-2016</fullName>
                </value>
                <value>
                    <fullName>4-2016</fullName>
                </value>
                <value>
                    <fullName>2-2018</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upside</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weight_Avg__c</fullName>
        <formula>(Amount__c * Likely__c) / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weight Avg</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Whats_Needed__c</fullName>
        <label>Whats Needed?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>MID( TEXT(Quarter__c) , 3, 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Account Revenue Forecast Comment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>By_Whom__c</columns>
        <columns>By_When__c</columns>
        <columns>Quarter_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Quarter__c</columns>
        <columns>Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PC</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>By_Whom__c</columns>
        <columns>By_When__c</columns>
        <columns>Quarter_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Quarter__c</columns>
        <columns>Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Revenue_Forecast__c</field>
            <operation>equals</operation>
            <value>ARF-1147037</value>
        </filters>
        <filters>
            <field>Quarter__c</field>
            <operation>contains</operation>
            <value>Q3</value>
        </filters>
        <label>PC</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Account Revenue Forecast Comment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Revenue Forecast Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>